--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,7 @@ selenium = ["selenium"]
 [tool.poetry.group.dev.dependencies]
 black = "^24.8.0"
 isort = "^5.13.2"
+pdbpp = "^0.10.3"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.3.2"
