--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -29,7 +29,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install poetry
         python -m pip install flake8
-        poetry install --all-extras  --no-root --no-directory
+        poetry install --all-extras
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -38,4 +38,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        poetry shell
+        pytest  --cov=browserbase --cov-report term-missing
