--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,5 +38,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        poetry shell
-        pytest  --cov=browserbase --cov-report term-missing
+        poetry run pytest  --cov=browserbase --cov-report term-missing
